some description changes

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 		<div
             style="text-align:left; display: inline-block; width: 500px; border: solid 1px #888; padding:10px; color: #888;">
 <p>	
-		Please follow this <a href="#" target="_blank">link</a>.
+		Please follow this <a href="https://github.com/blendermed/GCODE-Mixer/blob/main/README.md" target="_blank">link</a>.
 		</p>
 </div>
 </details>
@@ -395,7 +395,7 @@
 		<div
             style="text-align:left; display: inline-block; width: 500px; border: solid 1px #888; padding:10px; color: #888;">
 <p>	
-		We care about your data security and privacy and that’s why the gcode-mixer app is designed in a way, that your files never leave your computer and are processed locally (on your computer by a technique called JavaScript), even if the user interface runs in a browser.
+		Gcode-mixer app is designed in a way, that your files never leave your computer and are processed locally (by JavaScript).
 		</p>
 </div>
 
